welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: not found: value estAdo
  if (estAdo(a)) {res=res+1}
      ^countTeen:4: error: not found: value estAdo
  if (estAdo(b)) {res=res+1}
      ^countTeen:5: error: not found: value estAdo
  if (estAdo(c)) {res=res+1}
      ^countTeen:6: error: not found: value estAdo
  if (estAdo(d)) {res=res+1}
      ^